2004-03-09 Scott Dattalo  <scott@dattalo.com>
	* src/pic-instructions.h, src/12bit-instructions.h, src/stimuli.h,
	src/14bit-instructions.h, src/14bit-instructions.h, src/16bit-instructions.h,
	src/16bit-instructions.cc: changed references of pic-processor to Processor.

2004-03-08 Scott Dattalo  <scott@dattalo.com>
	* modules/push_button.cc, modules/push_button.h: new module
	from Carlos Ghirardelli.

2004-03-04 Scott Dattalo  <scott@dattalo.com>
	* src/register.h, src/pic-register.h, src/pic-processor.h,
	src/pic-processor.cc, src/14bit-registers.cc
	Removed the "file_register" class. Moved the sfr_register class to register.h.

2004-03-04 Scott Dattalo  <scott@dattalo.com>
	* src/processor.h, src/processor.cc, src/cod.cc:
	Added the new meber 'Find()' to the 'Files' class.

2004-03-03  Bert Driehuis <driehuis@playbeing.org>
	* /extras/rs232-gen/rs232.c:  Now compiles under BSD

2004-03-03 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_profile.cc, gui/gui_src_asm.cc, src/cod.cc,
	src/icd.cc, src/pic-processor.cc, src/processor.cc, src/processor.h
	Removed references to "processor_id". Changed name of _Files to Files
	in the Processor class.

2004-03-01  Bert Driehuis <driehuis@playbeing.org>
	* regression/run_regression.sh, regression/simulate:
	Fixes to allow regression tests to run on BSD 4.9.

2004-03-01  Bert Driehuis <driehuis@playbeing.org>
	* extras/lcd/lcd.cc:
	Bring the LCD module up-to-date with recent gpsim changes
	
2004-03-01  Bert Driehuis <driehuis@playbeing.org>
	* acinclude.m4, cli/input.cc:
	Fix readline support for BSD 4.9
	
2004-03-02 Scott Dattalo  <scott@dattalo.com>
	* src/pic-processor.cc: fixed a memory allocation bug in the
	FileContext class; an array was one element too small.
	* examples/modules/led_test, examples/modules/led_test/led_mod.asm, examples/modules/led_test/led_mod.asm:
	Added the LED test code to CVS.
	* modules/gpsim_modules.cc, modules/led.cc:
	LED module now works.
	
2004-03-01  Bert Driehuis <driehuis@playbeing.org>