@@ -783,189 +783,6 @@ void pic_processor::por(void)
 
 //-------------------------------------------------------------------
 //
-// disassemble - Disassemble the contents of program memory from
-// 'start_address' to 'end_address'. The instruction at the current
-// PC is marked with an arrow '==>'. If an instruction has a break
-// point set on it then it will be marked with a 'B'. The instruction
-// mnemonics come from the class declarations for each instruction.
-// However, it is possible to modify this on a per instruction basis.
-// In other words, each instruction in the program memory has it's
-// own instantiation. So a MOVWF at address 0x20 is different than
-// one at address 0x21. It is possible to change the mnemonic of
-// one without affecting the other. As of version 0.0.7 though, this
-// is not implemented.
-//
-
-void pic_processor::disassemble (int start_address, int end_address)
-{
-  instruction *inst;
-  int use_src_to_disasm =0;
-
-  if(start_address < 0) start_address = 0;
-  if(end_address >= pc->memory_size_mask) end_address = pc->memory_size_mask;
-
-  char str[50];
-
-  for(int i = start_address; i<=end_address; i++)
-    {
-      str[0] =0;
-      if (pc->value == i)
-	cout << "==>";
-      else
-	cout << "   ";
-      inst = program_memory[i];
-
-      // Breakpoints replace the program memory with an instruction that has
-      // an opcode larger than 16 bits.
-
-      if(program_memory[i]->opcode < 0x10000)
-	{
-	  cout << ' ';
-	}
-      else
-	{
-	  cout << 'B';
-	  Breakpoint_Instruction *bpi =  (Breakpoint_Instruction *)program_memory[i];
-	  inst = bpi->replaced;
-	}
-
-      //if((files != 0) && (use_src_to_disasm))
-      if(files && use_src_to_disasm)
-	{
-	  char buf[256];
-
-	  files->ReadLine(program_memory[i]->file_id,
-			   program_memory[i]->src_line - 1,
-			   buf,
-			   sizeof(buf));
-	  cout << buf;
-
-	  /*
-	  int fid = program_memory[i]->file_id;
-	  char buf[256];
-
-	  fseek(files[fid].file_ptr, 
-		files[fid].line_seek[program_memory[i]->src_line - 1],
-		SEEK_SET);
-	  fgets(buf, 256, files[fid].file_ptr);
-	  cout << buf;
-	  */
-	}
-      else
-	cout << hex << setw(4) << setfill('0') << i << "  "
-	     << hex << setw(4) << setfill('0') << inst->opcode << "    "
-	     << inst->name(str) << '\n';
-
-    }
-}
-
-//-------------------------------------------------------------------
-//
-// pic_processor -- list
-//
-// Display the contents of either a source or list file
-//
-void pic_processor::list(int file_id, int pc_val, int start_line, int end_line)
-{
-
-
-  if(!files || files->nsrc_files())
-    return;
-
-  if(pc_val > program_memory_size())
-    return;
-
-  if(program_memory[pc_val]->isa() == instruction::INVALID_INSTRUCTION)
-    {
-      cout << "There's no code at address 0x" << hex << pc_val << '\n';
-      return;
-    }
-
-  int line,pc_line;
-  if(file_id)
-    {
-      file_id = files->list_id();
-      line = program_memory[pc_val]->get_lst_line();
-      pc_line = program_memory[pc->value]->get_lst_line();
-    }
-  else
-    {
-      file_id = program_memory[pc_val]->file_id;
-      line = program_memory[pc_val]->get_src_line();
-      pc_line = program_memory[pc->value]->get_src_line();
-    }
-
-  start_line += line;
-  end_line += line;
-
-  FileContext *fc = (*files)[file_id];
-  if(fc)
-    return;
-
-  if(start_line < 0) start_line = 0;
-
-  if(end_line > fc->max_line())
-    end_line = fc->max_line();
-
-  cout << " listing " << fc->name() << " Starting line " << start_line
-       << " Ending line " << end_line << '\n';
-
-  /*
-  if(end_line > files[file_id].max_line)
-    end_line = files[file_id].max_line;
-
-  cout << " listing " << files[file_id].name << " Starting line " << start_line
-       << " Ending line " << end_line << '\n';
-  */
-
-  // Make sure the file is open
-  /*
-  if(files[file_id].file_ptr == 0)
-    {
-      if(files[file_id].name != 0)
-	files[file_id].file_ptr = fopen_path(files[file_id].name,"r");
-
-      if(files[file_id].file_ptr == 0)
-	{
-	  if(files[file_id].name != 0)
-	    cout << files[file_id].name;
-	  else
-	    cout << ".lst file";
-
-	  cout  << " was not found\n";
-
-	  return;
-	}
-    }
-  */
-
-  for(int i=start_line; i<=end_line; i++)
-    {
-
-      char buf[256];
-
-      files->ReadLine(program_memory[i]->file_id,
-		       program_memory[i]->src_line - 1,
-		       buf,
-		       sizeof(buf));
-      /*
-      fseek(files[file_id].file_ptr, 
-	    files[file_id].line_seek[i],
-	    SEEK_SET);
-      fgets(buf, 256, files[file_id].file_ptr);
-      */
-
-      if (pc_line == i)
-	cout << "==>";
-      else
-	cout << "   ";
-
-      cout << buf;
-    }
-}
-
-//-------------------------------------------------------------------
-//
 // pic_processor -- constructor
 //
 
